<resources>
    <string name="app_name">Indoor Positioning</string>

    <!-- Beacon -->
    <string name="beacon">Beacon</string>
    <string name="beacon_ibeacon">iBeacon</string>
    <string name="beacon_eddystone">Eddystone</string>
    <string name="beacon_rssi">RSSI</string>
    <string name="beacon_tx">TX</string>
    <string name="beacon_uuid">UUID</string>
    <string name="beacon_major">Major</string>
    <string name="beacon_minor">Minor</string>
    <string name="distance">Distance</string>

    <!-- Map -->
    <string name="title_map">Map</string>

    <!-- Radar-->
    <string name="title_radar">Radar</string>

    <!-- Chart -->
    <string name="title_chart">Chart</string>
    <string name="axis_label_time">Time in seconds</string>
    <string name="axis_label_rssi">RSSI in dBm</string>
    <string name="axis_label_rssi_filtered">Filtered RSSI in dBm</string>
    <string name="axis_label_distance">Distance in meters</string>
    <string name="axis_label_frequency">Frequency in Hz</string>
    <string name="axis_label_variance">Variance in dBm</string>

    <!-- Record -->
    <string name="title_record">Record</string>
    <string name="action_start_recording">Start Recording</string>
    <string name="action_stop_recording">Stop Recording</string>
    <string name="action_export_all_recordings">Export all recordings</string>
    <string name="action_clear_recordings">Delete all recordings</string>
    <string name="record_general_info">General Info</string>
    <string name="record_device_info">Device Info</string>
    <string name="record_beacon_info">Beacon Info</string>
    <string name="record_duration">Duration</string>
    <string name="record_duration_help">Recording time in seconds. 0 means manual stop.</string>
    <string name="record_offset">Offset</string>
    <string name="record_notes">Notes</string>
    <string name="record_notes_help">An optional comment</string>
    <string name="record_comment">Comment</string>
    <string name="record_name">Name</string>
    <string name="record_manufacturer">Manufacturer</string>
    <string name="record_model">Model</string>
    <string name="record_os_version">OS Version</string>
    <string name="record_transmission_power">TX Power</string>
    <string name="record_transmission_power_help">The transmission power in dBm (e.g. -20)</string>
    <string name="record_advertising_frequency">Advertising Frequency</string>
    <string name="record_advertising_frequency_help">Advertising frequency in Hz (e.g. 10)</string>
    <string name="record_distance">Distance</string>
    <string name="record_distance_help">The measured distance in meters (e.g. 3)</string>
    <string name="record_share_intent">Export json file</string>
    <string name="record_retry">Retry</string>
    <string name="record_uuid">Recording Uuid</string>
    <string name="record_uuid_help">Copy recording uuid to clipboard</string>

    <!-- Filter -->
    <string name="title_filter">Filter</string>
    <string name="filter_type">Beacon Type</string>
    <string name="filter_minimum_rssi">@string/beacon_rssi</string>
    <string name="filter_distance">@string/distance</string>
    <string name="filter_distance_immediate">Immediate</string>
    <string name="filter_distance_near">Near</string>
    <string name="filter_distance_far">Far</string>
    <string name="filter_uuid">@string/beacon_uuid</string>
    <string name="filter_major">@string/beacon_major</string>

    <!-- Menu -->
    <string name="menu_record">@string/title_record</string>
    <string name="menu_filter">@string/title_filter</string>
    <string name="menu_color">Coloring</string>
    <string name="menu_color_by_instance">Instances</string>
    <string name="menu_color_by_type">Types</string>
    <string name="menu_color_by_property">Properties</string>
    <string name="menu_value">Value</string>
    <string name="menu_value_rssi">RSSI</string>
    <string name="menu_value_rssi_filtered">RSSI (Filtered)</string>
    <string name="menu_value_distance">Distance</string>
    <string name="menu_value_frequency">Frequency</string>
    <string name="menu_value_variance">Variance</string>

    <!-- Errors -->
    <string name="error_location_disabled">Location services disabled</string>
    <string name="error_bluetooth_disabled">Bluetooth disabled</string>
    <string name="action_enable">Enable</string>
    <string name="action_stop">Stop Recording</string>
    <string name="notification_service_title">Indoor Positioning</string>
    <string name="notification_service_description">Indoor Positioning Recording running</string>

</resources>
