<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/RecordingContentContainer">

    <TextView
            style="@style/DefaultHeadingText"
            android:text="@string/record_general_info" />

    <com.google.android.material.textfield.TextInputLayout
            style="@style/DefaultTextInputLayout"
            android:hint="@string/distance"
            app:helperText="@string/record_distance_help">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDistanceEditText"
                style="@style/DefaultTextInputEditText"
                android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/record_notes"
            app:helperText="@string/record_notes_help"
            style="@style/DefaultTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordNotesEditText"
                style="@style/DefaultTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/DefaultTextInputLayout"
            android:hint="@string/record_uuid"
            app:helperText="@string/record_uuid_help">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordingUuidCopyEditText"
                style="@style/DefaultTextInputEditText"
                android:editable="false" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
