<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/RecordingContentContainer">

    <TextView
            android:text="@string/record_device_info"
            style="@style/DefaultHeadingText"/>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/record_name"
            style="@style/DefaultTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDeviceNameEditText"
                style="@style/DefaultTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/record_model"
            style="@style/DefaultTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDeviceModelEditText"
                style="@style/DefaultTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/record_manufacturer"
            style="@style/DefaultTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDeviceManufacturerEditText"
                style="@style/DefaultTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/record_os_version"
            style="@style/DefaultTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDeviceOsVersionEditText"
                style="@style/DefaultTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>