<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        android:id="@id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ignore="NamespaceTypo">
    <!--android:background="@color/primary"-->
    <ScrollView
            xmlns:tools="http://schemas.android.com/tools"
            tools:context="com.nexenio.bleindoorpositioningdemo.recording.OverallRecordingActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultTextInputLayout"
                    android:hint="@string/record_uuid"
                    app:helperText="@string/record_uuid_help">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recordingUuidCopyEditText"
                        style="@style/DefaultTextInputEditText"
                        android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/record_duration"
                    app:helperText="@string/record_duration_help"
                    style="@style/DefaultTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recordingDurationEditText"
                        style="@style/DefaultTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/record_offset"
                    style="@style/DefaultTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offsetEditText"
                        style="@style/DefaultTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/recordButton"
                    android:onClick="onRecordButtonClicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_start_recording"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/exportAllRecordingsButton"
                    android:onClick="onExportAllRecordingsButtonClicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_export_all_recordings"/>

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>